--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "serverless-offline-local-authorizers-plugin",
-  "version": "1.3.0",
+  "name": "@ivinco/serverless-offline-local-authorizers-plugin",
+  "version": "2.0.0",
   "main": "./dist/index.js",
   "scripts": {
     "tsc": "./node_modules/typescript/bin/tsc",
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nlang/serverless-offline-local-authorizers-plugin.git"
+    "url": "git+https://github.com/Ivinco/serverless-offline-local-authorizers-plugin.git"
   },
   "keywords": [
     "serverless",
@@ -29,12 +29,22 @@
     "lambda authorizer",
     "aws lambda"
   ],
-  "dependencies": {},
-  "author": "Nicolai Lang <hi@nlang.de>",
-  "homepage": "https://github.com/nlang/serverless-offline-local-authorizers-plugin#readme",
+  "author": "Pavel Pykov <pavel@ivinco.com>",
+  "homepage": "https://github.com/Ivinco/serverless-offline-local-authorizers-plugin#readme",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "14.18.11",
-    "typescript": "^4.5.5"
+    "@types/node": "20.10.4",
+    "typescript": "^5.3.3"
+  },
+  "types": "./dist/index.d.ts",
+  "description": "[Serverless](http://www.serverless.com) plugin for adding authorizers when developing and testing functions locally with [serverless-offline](https://github.com/dherault/serverless-offline).",
+  "bugs": {
+    "url": "https://github.com/Ivinco/serverless-offline-local-authorizers-plugin/issues"
+  },
+  "directories": {
+    "example": "examples"
+  },
+  "dependencies": {
+    "undici-types": "^5.26.5"
   }
 }
