--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@ivinco/serverless-offline-local-authorizers-plugin",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "main": "./dist/index.js",
   "scripts": {
-    "tsc": "./node_modules/typescript/bin/tsc",
-    "postinstall": "npm run tsc"
+    "tsc": "./node_modules/typescript/bin/tsc"
   },
   "files": [
     "dist",
@@ -31,6 +30,10 @@
   "author": "Pavel Pykov <pavel@ivinco.com>",
   "homepage": "https://github.com/Ivinco/serverless-offline-local-authorizers-plugin#readme",
   "license": "MIT",
+  "devDependencies": {
+    "@types/node": "20.10.4",
+    "typescript": "^5.3.3"
+  },
   "types": "./dist/index.d.ts",
   "description": "[Serverless](http://www.serverless.com) plugin for adding authorizers when developing and testing functions locally with [serverless-offline](https://github.com/dherault/serverless-offline).",
   "bugs": {
@@ -40,8 +43,6 @@
     "example": "examples"
   },
   "dependencies": {
-    "undici-types": "^5.26.5",
-    "@types/node": "20.10.4",
-    "typescript": "^5.3.3"
+    "undici-types": "^5.26.5"
   }
 }
